# burn-transformers

./: .envrc  .envrc.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml  deploy.yml
data/datasets/snips/: intent_labels.txt
src/: lib.rs
src/cli/: datasets.rs  mod.rs  pipelines.rs
src/cli/models/: bert.rs  index.rs  mod.rs  model.rs
src/cli/models/bert/: mod.rs  model.rs  sequence_classification.rs
src/cli/pipelines/: mod.rs  pipeline.rs  text_classification.rs
src/datasets/: mod.rs  snips.rs
src/models/: available.rs  mod.rs
src/models/bert/: mod.rs  sequence_classification.rs
src/models/bert/sequence_classification/: batcher.rs  config.rs  inference.rs  mod.rs  model.rs  text_classification.rs  token_classification.rs  training.rs
src/models/bert/text_classification/: config.rs  mod.rs  model.rs  train.rs
src/models/bert/token_classification/: config.rs  mod.rs  model.rs  train.rs
src/pipelines/: mod.rs
src/pipelines/sequence_classification/: batcher.rs  config.rs  mod.rs
src/pipelines/sequence_classification/text_classification/: batcher.rs  inference.rs  mod.rs  model.rs  training.rs
src/pipelines/sequence_classification/token_classification/: batcher.rs  inference.rs  item.rs  mod.rs  model.rs  output.rs  training.rs
src/pipelines/text_classification/: batcher.rs  inference.rs  item.rs  mod.rs  model.rs  pipeline.rs  training.rs
src/pipelines/token_classification/: batcher.rs  mod.rs
src/utils/: classes.rs  files.rs  hugging_face.rs  mod.rs  renderer.rs  tensors.rs
