[package]
name = "burn-transformers"
version = "0.2.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"
description = "A WIP port of the HuggingFace Transformers library for the Burn deep learning framework"
homepage = "https://github.com/bkonkle/burn-transformers"
repository = "https://github.com/bkonkle/burn-transformers"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.80"
burn = { version = "0.13", features = ["train", "tch", "metrics"] }
bert-burn = { git = "https://github.com/tracel-ai/models", package = "bert-burn", features = [
    "safetensors",
    "tch-gpu",
] }
candle-core = { version = "0.5" }
csv = "1.3.0"
derive-new = "0.6"
futures = "0.3"
hf-hub = { version = "0.3.2", features = ["tokio"] }
lazy_static = "1.4"
libm = "0.2.8"
liquid = "0.26"
log = "0.4"
pico-args = "0.5.0"
pretty_env_logger = "0.5"
rand = "0.8"
rust_tokenizers = "8.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.11"
tch = { version = "0.15" }
thiserror = "1.0.59"
tokenizers = { version = "0.19", features = [
    "onig",
    "http",
], default-features = false }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.2"
url = "2.0.0"
